# tackbox

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .tackbox-reporters  LICENSE  README.md  dev.py  eslint.config.preset.js  go.mod  go.sum  hygiene.py  package-lock.json  package.json
.github/workflows/: ci.yml  publish-npm.yml  publish-report-java.yml  publish-report-py.yml  publish.yml  verify-release.yml  wheels.yml
.tackbox/: approvals
docs/: publishing-helpers.md  report-contracts.md
engines/: lock.json  manifest.json  pyproject.toml  setup.py
engines/src/tackbox_engines/: __init__.py
go/: README.md
go/analyzers/: analyzers.go
go/analyzers/doublecapture/: doublecapture.go  doublecapture_test.go  doublelane.go
go/analyzers/doublecapture/testdata/src/declared/: declared.go
go/analyzers/doublecapture/testdata/src/doublecapture/: doublecapture.go
go/analyzers/errcheck/: errcheck.go  errcheck_test.go  flow.go
go/analyzers/errcheck/testdata/src/declared/: declared.go
go/analyzers/errcheck/testdata/src/errcheck/: errcheck.go
go/analyzers/errcheck/testdata/src/usagesink/: usagesink.go
go/analyzers/fingerprint/: fingerprint.go  fingerprint_test.go
go/analyzers/fingerprint/testdata/src/declared/: declared.go
go/analyzers/fingerprint/testdata/src/fingerprint/: dedupexempt_test.go  fingerprint.go
go/analyzers/notifygate/: notifygate.go  notifygate_test.go
go/analyzers/notifygate/testdata/src/notifygate/: notifygate.go
go/analyzers/parsenil/: parsenil.go  parsenil_test.go
go/analyzers/parsenil/testdata/src/parsenil/: parsenil.go
go/analyzers/recoverswallow/: recoverswallow.go  recoverswallow_test.go
go/analyzers/returnnil/: returnnil.go  returnnil_test.go
go/analyzers/skiptest/: skiptest.go  skiptest_test.go
go/analyzers/terminal/: terminal.go  terminal_test.go
go/cmd/erclint/: golden_test.go  main.go  paths_from_test.go
go/cmd/erclint-opengrep/: hardening_test.go  inner_spawn_test.go  main.go  paths_from_test.go
go/cmd/erclint-opengrep/rules/: erc006-dedupkey.yaml  erc006-fingerprint-secrets.yaml  erc006-fingerprint-user-input-go.yaml  exceptions-go.yaml  exceptions-java.yaml  exceptions-python.yaml
go/cmd/erclint-opengrep/testdata/: erc006_secret_corpus.go
go/cmd/erclint/testdata/golden/: json.stdout  version.stdout
go/cmd/erclint/testdata/goldenrepo/: go.mod
go/cmd/tackbox-jscpd/: inner_spawn_test.go  main.go  main_test.go  paths_from_test.go
go/internal/astutil/: astutil.go  astutil_test.go
go/internal/gomodtest/: gomodtest.go
go/internal/markers/: markers.go  runner.go
go/internal/reporters/: reporters.go  reporters_test.go
go/internal/wrapcli/: pathlist_test.go  wrapcli.go
go/report/: README.md  publicapi_test.go  report.go  report_test.go
java/: pom.xml
java/report/: DESIGN.md  README.md  pom.xml
java/src/test/resources/testdata/: ExitInCatch.java.txt  FqnDecoyReporterDecl.java.txt  FqnDecoyTier1.java.txt  FqnDecoyTier2.java.txt  FqnTier2Positive.java.txt  HolderCrossFile.java.txt  HolderStaticLogger.java.txt  Jv001GuardSwallow.java.txt  Jv002Chain.java.txt  Jv002Marked.java.txt  Jv002MarkerEmptyReason.java.txt  Jv004Useless.java.txt  Jv006DoubleCapture.java.txt  Jv006GuardShapes.java.txt  Jv008CleanLiteral.java.txt  Jv008NonSinkOrigin.java.txt  Jv008Slf4jSecret.java.txt  Jv008Tier2Clean.java.txt  Jv008Tier2Secret.java.txt  LambdaBoundaryChain.java.txt  LambdaBoundaryDoubleCapture.java.txt  LambdaBoundaryUseless.java.txt  LambdaSwallow.java.txt  LocalLoggerShadow.java.txt  Marked.java.txt  MarkerAboveTry.java.txt  MarkerEmptyReason.java.txt  MarkerShortReason.java.txt  NestedBlockPropagates.java.txt  NonStaticInnerCapturesOuter.java.txt  NotifyGate.java.txt  OtherLogDecl.java.txt  PrintStackTrace.java.txt  PrintStderr.java.txt  PrivHolderDecl.java.txt  ReportCapture.java.txt  ReportDoubleCapture.java.txt  ReportDoubleLane.java.txt  ReportLocalShadowDecoy.java.txt  ReportOtherPackageDecoy.java.txt  (+37 more)
js/: README.md  eslint-plugin.js  report.js
js/markdownlint-rules/: declared-chars.js  link-integrity.js  no-non-ascii.js
js/rules/: _shared.js  no-broad-notify.js  no-console-error.js  no-focused-test.js  no-parse-fallback.js  no-secret-in-report.js  no-skipped-test.js  no-swallow-allsettled.js  no-swallow-catch.js  no-swallow-promise-catch.js  no-throw-and-report.js  ts-exit-in-catch.js  ts-rethrow-without-cause.js  ts-useless-catch.js  valid-dedup-key.js  valid-error-report.js  valid-throw-error.js
js/tests/: declared-chars.test.js  eslint-wrapper.test.js  link-integrity.test.js  mdlint-wrapper.test.js  no-non-ascii.test.js  report.test.js  reporters.test.js  rules.test.js  svelte.test.js
py/: pyproject.toml  setup.py
py/tackbox/: approvals.py  cache.py  cli.py  codequality.py  doctor.py  engines.py  escapes.py  gitfiles.py  hashing.py  reporters.py  scopes.py  source_set.py
py/tackbox/pyrules/: __init__.py  checker.py  codes.py  markers.py  origin.py  reporters.py
py/tackbox_report/: DESIGN.md  README.md  pyproject.toml
py/tackbox_report/tackbox_report/: __init__.py
py/tackbox_report/tests/: conftest.py  test_report.py
py/tests/: _fixtures.py  conftest.py  test_approvals.py  test_attributes.py  test_cache.py  test_ci_workflow.py  test_cli_aggregate.py  test_cli_attributes.py  test_cli_cache.py  test_cli_changed.py  test_cli_codequality.py  test_cli_escapes.py  test_cli_fixture.py  test_cli_hook.py  test_cli_mdlint_links.py  test_cli_nested_go.py  test_cli_reporters.py  test_dev.py  test_doctor.py  test_engines.py  test_engines_listfile.py  test_engines_lock.py  test_engines_store.py  test_guard_engines_publish.py  test_hygiene.py  test_machine_findings.py  test_materialize_fixture.py  test_publish_npm_workflow.py  test_publish_workflow.py  test_pyrules.py  test_pyrules_hardening.py  test_pyrules_origin.py  test_reporters.py  test_scopes.py  test_source_set.py  test_wheels_e2e.py  test_wheels_workflow.py  test_workflow_pins.py
rules/: DECISIONS.md
scripts/: build_wheels.py  guard_engines_publish.py  lock_engines.py  materialize_fixture.py
(+45 files in other folders)
