[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tackbox-engines"
version = "0.0.0"
description = "Bundled runtimes and third-party binaries used by the tackbox CLI."
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tackbox_engines" = [
    "bin/*",
    "vendor/**/*",
    "third_party/**/*",
    "LICENSE",
    "engines.json",
]
