[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tackbox"
description = "Universal lints + capture helpers driven by a hermetic Python CLI."
requires-python = ">=3.11"
license = { text = "MIT" }
dynamic = ["version", "dependencies"]

[project.scripts]
tackbox = "tackbox.cli:main"

# The py-native exception engine is a flake8 plugin; flake8 discovers it by this
# entry point (codes TBX001..TBX007). Requires tackbox to be installed in the
# same env as flake8 - true for `uvx tackbox` and the dev editable install.
[project.entry-points."flake8.extension"]
TBX = "tackbox.pyrules:Plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tackbox*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"tackbox" = [
    "bin/*",
    "rules/**/*",
    "third_party/**/*",
    "engines.json",
]

[dependency-groups]
dev = ["pytest>=8", "pyyaml>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
