[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tackbox"
description = "Cross-language static analysis for explicit error handling and code-quality guardrails."
requires-python = ">=3.11"
license = { text = "MIT" }
dynamic = ["version", "dependencies", "readme"]

[project.scripts]
tackbox = "tackbox.cli:main"

# The py-native exception engine is a flake8 plugin; flake8 discovers it by this
# entry point (codes TBX001..TBX008). Requires tackbox to be installed in the
# same env as flake8 - true for `uvx tackbox` and the dev editable install.
[project.entry-points."flake8.extension"]
TBX = "tackbox.pyrules:Plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tackbox*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"tackbox" = [
    "bin/*",
    "rules/**/*",
    "third_party/**/*",
    "engines.json",
]

# Dev/test toolchain (what dev.py passes via `uv run --group dev`). flake8 hosts
# the pyrules TBX plugin declared above; pyyaml backs the workflow/hygiene tests.
[dependency-groups]
dev = ["pytest>=8", "pyyaml>=6", "flake8"]

[tool.pytest.ini_options]
# Project boundary, not a suite filter: the nested py/tackbox_report is its own
# project that dev.py discovers and runs separately, so a bare pytest here must
# not descend into it.
testpaths = ["tests"]
pythonpath = [".", "tests"]
