# STANDALONE packaging for the tackbox_report runtime helper, deliberately
# separate from py/pyproject.toml (the tackbox linter/CLI): a repo depends on
# the runtime helper without pulling flake8, and on the linter without pulling
# sentry-sdk. Release procedure: docs/publishing-helpers.md.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tackbox-report"
version = "0.2.0"
description = "Direct error-reporting helpers for Python applications using Sentry or GlitchTip."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nikita Tsymbal", email = "nikita.tsym@gmail.com" }]
keywords = ["sentry", "glitchtip", "error-reporting", "capture", "observability"]
# sentry-sdk 2.x forking scope API (new_scope) is load-bearing for per-capture
# D003 isolation, so the range is capped below 3.x rather than an open-ended
# floor.
dependencies = ["sentry-sdk>=2.0,<3.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nikitatsym/tackbox"
Repository = "https://github.com/nikitatsym/tackbox"

# PEP 735 dev group (local-only, not published metadata): test deps pulled by
# `uv run --group dev` in dev.py and the publish gate.
[dependency-groups]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["tackbox_report*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"tackbox_report" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
